# bitbot-ovinf

./: .gitignore  CMakeLists.txt  README.md  main.cc  user_func.hpp
checkpoint/: apr23_22_stand.onnx
checkpoint/fc2/: 5k.onnx
checkpoint/hhfc/: Jun05_09-25-04_sw.onnx  Jun05_14-06-12_sw.onnx  Jun06_23-45-26_swr.onnx  Jun07_09-16-14_sw.onnx  apr23_08.onnx  apr28_11.onnx  dh.onnx
config/: backend.json  bitbot_hhfc.xml  robot.yaml
config/fc2/: bhr8_deploy.yaml  bhr8_mujoco.xml  bhr8_mujoco.yaml
config/hhfc/: bitbot_hhfc.xml  hhfc_cifx.xml  hhfc_mj.xml  robot-deploy.yaml  robot.yaml
models/fc2/meshes/: lankle.stl  lforearm.stl  lhip2.stl  lshoulder1.stl  lshoulder2.stl  rankle.stl  rforearm.stl  rhip2.stl  rshoulder1.stl  rshoulder2.stl
models/fc2/urdf/: bhr8fc2mc.urdf  bhr8fc2mc_origin.urdf
models/fc2/xml/: bhr8fc2.xml
models/hhfc/urdf/: hhfc-realfoot.urdf  hhfc.urdf
models/hhfc/xml/: hhfc.xml  hhfc_terrain.xml
models/xml/: hhfc.xml
terrain/: terrain_generator.py  usage.md
